// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly for fullBorder and filledBackground variant 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
}

.c5 svg {
  width: 100%;
  height: 100%;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
  border: 1px solid #dad2c4;
  border-radius: 16px;
  background-color: #f1e9dc;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(180deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-top: 12px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-bottom: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down"
          color="#9d927b"
          data-icon="chevron-down"
          data-prefix="far"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.5 409c9.4 9.4 24.6 9.4 33.9 0l200-200c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-183 183-183-183c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l200 200z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="c7"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when closed 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
}

.c5 svg {
  width: 100%;
  height: 100%;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(0deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 0;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down"
          color="#9d927b"
          data-icon="chevron-down"
          data-prefix="far"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.5 409c9.4 9.4 24.6 9.4 33.9 0l200-200c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-183 183-183-183c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l200 200z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when expanded 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
}

.c5 svg {
  width: 100%;
  height: 100%;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(180deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 0;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-top: 12px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-bottom: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down"
          color="#9d927b"
          data-icon="chevron-down"
          data-prefix="far"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.5 409c9.4 9.4 24.6 9.4 33.9 0l200-200c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-183 183-183-183c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l200 200z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="c7"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;
